# hodnoceni-obedu

./: .gitignore  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: crud.py  dependencies.py  email.py  main.py  models.py  routes.py  scraper.py  utils.py
backend/app/api/: dependencies.py
backend/app/core/: config.py  db.py  scheduler.py  security.py
backend/app/crud/: errors.py  lunch_crud.py  rating_crud.py
backend/app/email-templates/: report.html
backend/app/models/: lunch_model.py  rating_model.py  token_model.py  user_model.py
backend/app/routers/: lunch.py  lunch_router.py  scrape.py  scrape_router.py  scraper.py  user.py
backend/app/schemas/: login_schema.py  lunch_schema.py  resposne_schema.py
backend/app/scraper/: scheduler.py  scraper.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.js  App.tsx  LunchRatingForm.jsx  types.ts
frontend/src/components/: BottomNav.tsx  GuestLandingPage.tsx  LandingPage.jsx  LoginPage.jsx  LogoutModal.jsx  LunchRatingForm.jsx  PastMealList.tsx  RatingSection.tsx  TodayMealCard.tsx
frontend/src/css/: landing_page.css  login_page.css  logout_modal.css  lunch_rating_form.css
frontend/src/hooks/: useLogin.js  useLogin.ts  useLunch.js  useLunch.ts
frontend/src/pages/: LandingPage.tsx  LoginPage.tsx  LogoutModal.tsx  LunchRatingForm.tsx
frontend/src/utils/: date.ts
