[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.comy" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi[standard]>=0.115.8,<0.116.0",
	"mysql-connector-python>=9.2.0,<9.3.0",
	"sqlalchemy>=2.0.37,<3.0.0",
	"pydantic-settings>=2.8.1,<3.0.0",
	"sqlmodel>=0.0.24,<0.1.0",
	"aiohttp>=3.11.14,<3.12.0",
	"selectolax>=0.3.28,<0.4",
	"emails>=0.6",
	"apscheduler>=3.11.0",
	"jinja2>=3.1.6",
]
